Update Лабораторная работа 4 Визуализация 3D поверхности.md

--- a/2 Term/OOP/Лабораторная работа 4 Визуализация 3D поверхности.md
+++ b/2 Term/OOP/Лабораторная работа 4 Визуализация 3D поверхности.md
@@ -1,4 +1,4 @@
-# Лабораторная работа №3 "Визуализация 3D поверхности"
+# Лабораторная работа №4 "Визуализация 3D поверхности"
 
 ## Архитектура приложения
 
@@ -8,7 +8,7 @@
 Реализует все операции над файлами и данными. Считает значения для поворота, перемещения, изменения масштаба (все операции необходимо выполнять через матрицы). Также в этом домене производится подготовка к отрисовке. Диаграмма классов представлена на рисунке 1. Использование функций Qt в модуле "бизнес-логики" запрещено. 
 
 <div align="center">
-  <img src="images/sceme.png"/>
+  <img src="images/UML-lab04.png"/>
   <p>Рисунок 1 Диаграмма классов</p>
 </div>
 
